fix some migrations
