# docs/swagger.json
@@ -131,6 +131,130 @@
                 }
             }
         },
+        "/api/colors": {
+            "get": {
+                "description": "Get all colors, acept pagination ?page=1\u0026page_color=10",
+                "tags": [
+                    "Colors"
+                ],
+                "summary": "Get all colors",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Color"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Create color, ej. {\"description\": \"new color name\"}",
+                "tags": [
+                    "Colors"
+                ],
+                "summary": "Create color",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Color"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/colors/{id}": {
+            "get": {
+                "description": "Find color",
+                "tags": [
+                    "Colors"
+                ],
+                "summary": "Find color",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Color"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Update color ej. {\"description\": \"update color name\"}",
+                "tags": [
+                    "Colors"
+                ],
+                "summary": "Update color",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Color"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete color",
+                "tags": [
+                    "Colors"
+                ],
+                "summary": "Delete color",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Color"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
         "/api/measures": {
             "get": {
                 "description": "Get all measures, acept pagination ?page=1\u0026page_size=10",
@@ -502,9 +626,57 @@
                     }
                 }
             }
+        },
+        "/auth/login": {
+            "post": {
+                "description": "Register user, acept in json body: {\"email\": \"jondoe@domain.com\",\"password\": \"1234Aaaa\u0026\u0026d++\"}",
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Longin register user",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/controllers.Autenticate"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.Error"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
+        "controllers.Autenticate": {
+            "type": "object",
+            "properties": {
+                "expires_at": {
+                    "type": "integer"
+                },
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "controllers.Error": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Category": {
             "type": "object",
             "required": [
@@ -518,6 +690,26 @@
                     "type": "string"
                 },
                 "id": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Color": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "tone": {
                     "type": "string"
                 },
                 "updated_at": {
@@ -569,7 +761,8 @@
             "type": "object",
             "required": [
                 "email",
-                "name"
+                "names",
+                "password"
             ],
             "properties": {
                 "created_at": {
@@ -584,7 +777,10 @@
                 "id": {
                     "type": "string"
                 },
-                "name": {
+                "names": {
+                    "type": "string"
+                },
+                "password": {
                     "type": "string"
                 },
                 "status": {
